# meeting-execution-agent

./: .env.example  .env.vps.example  .gitignore  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml
apps/web/: Dockerfile  package.json  railway.json  tsconfig.json  vite.config.ts
apps/web/src/: routeTree.gen.ts  styles.css
apps/web/src/components/: AppShell.tsx  DashboardView.tsx  MeetingForm.tsx  MeetingList.tsx  RunDetail.tsx  StatusBadge.tsx
apps/web/src/lib/: agent-api.ts  runs.functions.ts
apps/web/src/routes/: __root.tsx  dashboard.tsx  index.tsx  meetings.$meetingId.tsx  meetings.tsx  runs.$runId.tsx  settings.tsx
docs/: architecture.md  implementation-plan.md
docs/adr/: 001-monorepo-multiservice.md  002-web-owned-auth.md  003-fastapi-agent-service.md  004-langgraph-openrouter.md  005-railway-multiservice-deploy.md
infra/: compose.db.yml
scripts/: infra.mjs
services/agent-api/: Dockerfile  pyproject.toml  railway.json
services/agent-api/app/: __init__.py  main.py  models.py  store.py
services/agent-api/tests/: test_runs.py
services/worker/: Dockerfile  pyproject.toml  railway.json
services/worker/app/: main.py
