[project]
name = "meeting-execution-agent"
version = "0.1.0"
description = "Monorepo for a meeting execution agent portfolio project."
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
  "pytest>=8.4.0",
  "ruff>=0.12.0",
]

[tool.uv]
package = false

[tool.uv.workspace]
members = [
  "packages/agent-core",
  "services/agent-api",
  "services/worker",
]

[tool.pytest.ini_options]
testpaths = ["packages/agent-core/tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

