[project]
name = "agent-api"
version = "0.1.0"
description = "FastAPI service for meeting execution agent runs."
requires-python = ">=3.12"
dependencies = [
  "agent-core",
  "fastapi>=0.115.0",
  "pydantic>=2.11.0",
  "pydantic-settings>=2.10.0",
  "uvicorn[standard]>=0.34.0",
]

[tool.uv]
package = false

[tool.uv.sources]
agent-core = { workspace = true }

